<resources>
    <string name="app_name">Diary</string>
    <string name="fragment_task">task</string>
    <string name="fragment_calendar">calendar</string>
    <string name="fragment_settings">settings</string>
    <string name="your_calendar">Your Calendar</string>
    <string name="name_of_task">Name of task</string>
    <string name="creating_a_task">Creating a Task</string>
    <string name="save">Save</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="change_time">Change Time</string>
    <string name="_16_40">16:40</string>
    <string name="_21_04_2021">21.04.2021</string>
    <string name="change_date">Change Date</string>
    <string name="change_note">Change Note</string>
    <string name="change_title">Change Title</string>
    <string name="changes">Changes</string>
    <string name="new_title">New Title</string>
    <string name="textview">TextView</string>
    <string name="note">Note</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>