<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <View
        android:layout_width="70dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/TitleSettingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Title.Media"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Changing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/changes"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Title.Media" />

    <Button
        android:id="@+id/ChangeTime"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="24dp"
        android:layout_weight="0"
        android:text="@string/change_time"
        android:textColor="#000000"
        app:backgroundTint="@android:color/darker_gray"
        app:rippleColor="#FFFFFF" />

    <TextView
        android:id="@+id/NewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="-30dp"
        android:text="@string/_16_40" />

    <TextView
        android:id="@+id/NewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/_21_04_2021" />

    <Button
        android:id="@+id/ChangeDate"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="-30dp"
        android:text="@string/change_date"
        android:textColor="#000000"
        app:backgroundTint="@android:color/darker_gray"
        app:rippleColor="#FFFFFF" />

    <TextView
        android:id="@+id/NewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/new_title" />

    <Button
        android:id="@+id/ChangeTitle"
        android:layout_width="154dp"
        android:layout_height="38dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="45dp"
        android:text="@string/change_title"
        android:textColor="#000000"
        app:backgroundTint="@android:color/darker_gray"
        app:rippleColor="#FFFFFF" />

    <TextView
        android:id="@+id/Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Title.Media" />

</LinearLayout>